# mdbind

./: AGENTS.md  MANIFEST.in  README.md  llms.txt  pyproject.toml  specification.md
.github/: copilot-instructions.md
examples/: README.md
examples/wiki/: intro.md
scrum/: architecture.md  backlog.md  decisions.md  sprint.md
scrum/backlog/: B-012.md  B-013.md  B-014.md  B-027.md  B-028.md  B-029.md  B-032.md  B-033.md  B-034.md  B-035.md  B-036.md  B-038.md  B-042.md  B-043.md  B-044.md  B-045.md  B-046.md  B-047.md  B-048.md  B-049.md  B-050.md
scrum/sprint/: SPR-2026-02.md  SPR-2026-03.md  SPR-2026-04.md  SPR-2026-07.md  SPR-2026-08.md  SPR-2026-10.md  SPR-2026-11.md  SPR-2026-13.md  SPR-2026-14.md  SPR-2026-16.md  SPR-2026-18.md  SPR-2026-22.md  SPR-2026-23.md  SPR-2026-24.md  SPR-2026-25.md  SPR-2026-26.md  SPR-2026-27.md  SPR-2026-28.md
src/mdbind/: cli.py  metadata.py  schema_validation.py  template_packages.py
src/mdgraph/: cli.py  composer.py  parser.py
templates/default/: manifest.yaml
templates/engineering/: manifest.yaml
templates/kanban/: manifest.yaml
templates/minimal/: manifest.yaml
templates/product/: manifest.yaml
tests/: test_cli_compose.py  test_cli_ia_v2.py  test_cli_init_pack.py  test_cli_metadata.py  test_cli_next_id_workflows.py  test_cli_session_hooks.py  test_cli_tree.py  test_cli_validate.py  test_cli_version.py  test_cli_web_schemas_templates.py  test_directives.py  test_examples.py  test_parser.py
tests/fixtures/: duplicate_id.md  duplicate_payload.md  get_source.md  missing_id.md  multi_directives.md  nested.md  (+4 more)
(+63 files in other folders)
