[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdbind"
version = "0.1.14"
description = "MdBind — Structured memory in plain Markdown"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "Guilherme Sá", email = "gui.r.sa@pm.me" }
]   

license = { text = "Apache-2.0" }

keywords = ["markdown", "graph", "cli", "agent", "llm", "rag", "knowledge-base", "context"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "pydantic>=2.0",
    "markdown-it-py>=3.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "jinja2>=3.0",
]


[project.scripts]
mdb = "mdbind.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/gresendesa/mdbind"
Repository = "https://github.com/gresendesa/mdbind"
"Bug Tracker" = "https://github.com/gresendesa/mdbind/issues"
Documentation = "https://github.com/gresendesa/mdbind#readme"
